@@ -2,6 +2,7 @@ CHANGELOG VERSIONX
 
 VersionX 1.0 Alpha4 (to be released)
 ===================================
+- #19: Fix plugin code to save full timestamp as UNIX timestamp, and format in getlist process.
 - #34: Fix lexicon reference for "no" in getlist. Improve content_disposition
 - Added copyright notice in Russian translation.
 - #37: Update link to modx.com instead of modxcms.com
